2025-11-03  Oliver Kiddle  <opk@zsh.org>

	* Christopher Bock: github #148: Completion/Unix/Command/_fortune:
	complete fortune databases

	* 54022: Completion/BSD/Command/_fw_update,
	Completion/BSD/Command/_rcctl, Completion/Unix/Command/_sysctl,
	Completion/Unix/Command/_watch: completion updates for openbsd 7.8

	* 54020: configure.ac: add library for network support on Haiku OS

	* 54019: configure.ac, Makefile.in, Src/params.c, Test/ztst.zsh,
	Src/Builtins/rlimits.c, Src/Modules/curses.mdd: AIX support fixes

2025-10-31  Bart Schaefer  <schaefer@zsh.org>

	* Jim Murphy: 53783: Functions/Prompts/prompt_adam2_setup,
	Functions/Prompts/prompt_special_chars: use case-insensitive
	search for more variants of language files

2025-10-31  Oliver Kiddle  <opk@zsh.org>

	* LangLangbart: github #149: Completion/Darwin/Command/_say:
	improve voice name parsing in say completion

	* 54013: Src/builtin.c, Src/jobs.c: add a range check on signal
	numbers passed to trap

	* 54012: Src/subst.c: fix use of out of scope array variable

	* 54007: Src/exec.c, Src/hist.c, Src/init.c, Src/jobs.c, Src/module.c,
	Src/params.c, Src/signals.c, Src/Zle/complete.c, Src/Zle/zle_misc.c,
	Src/Zle/compresult.c, Src/Zle/zle_keymap.c, Src/Zle/zle_main.c:
	remove some uses of mod_export that were likely unintended

2025-10-27  Bart Schaefer  <schaefer@zsh.org>

	* Dan Drake: 53803: Functions/Prompts/prompt_adam1_setup: make
	adam1 prompt wrap len, ellipsized path elements configurable

2025-10-26  Bart Schaefer  <schaefer@zsh.org>

	* Philippe: 53732: Src/loop.c, Test/A01grammar.ztst: avoid tail-call
	exec in always block

	* Philippe: 53781: Src/params.c, Test/B02typeset.ztst,
	Test/K01nameref.ztst: fix load of autoload variable via a reference

	* Philippe: 53782: Src/params.c, Test/K01nameref.ztst: changes to
	handling of nameref base level: avoid changing base on assignment;
	omit base level for up-scope references; do not follow reference
	chains when computing base level of new references