@@ -742,18 +742,19 @@ struct multio {
 /* lvalue for variable assignment/expansion */
 
 struct value {
-    int isarr;
     Param pm;		/* parameter node                      */
+    char **arr;		/* cache for hash turned into array */
+    int isarr;
     int flags;		/* flags defined below                 */
     int start;		/* first element of array slice, or -1 */
     int end;		/* 1-rel last element of array slice, or -1 */
-    char **arr;		/* cache for hash turned into array */
 };
 
 enum {
     VALFLAG_INV =	0x0001,	/* We are performing inverse subscripting */
     VALFLAG_EMPTY =	0x0002,	/* Subscripted range is empty */
-    VALFLAG_SUBST =     0x0004  /* Substitution, so apply padding, case flags */
+    VALFLAG_SUBST =	0x0004,	/* Substitution, so apply padding, case flags */
+    VALFLAG_REFSLICE=	0x0008	/* Value is a reference to an array slice */
 };
 
 #define MAX_ARRLEN    262144
