@@ -1,3 +1,9 @@
+2025-11-09  Bart Schaefer  <schaefer@zsh.org>
+
+	* Philippe: 54057: Src/params.c, Src/zsh.h, Test/K01nameref.ztst:
+	add VALFLAG_REFSLICE to enable assignment through named reference
+	to change type of the referent
+
 2025-11-03  Oliver Kiddle  <opk@zsh.org>
 
 	* Christopher Bock: github #148: Completion/Unix/Command/_fortune:
